# Cargo.toml
[package]
edition = "2018"
name = "blinky-rust"
version = "0.1.0"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "0.7.6"      # Access to the generic ARM peripherals
cortex-m-rt = "0.7.2"  # Startup code for the ARM Core
embedded-hal = { version = "0.2.7" }
nb = "0.1.2"
panic-halt = "0.2.0"    # Panic handler
usb-device = "0.2.8"
usbd-serial = "0.1.1"
#stm32f1 = "0.15.1"
#stm32f1xx-hal = { features = ["stm32f103", "medium"], version = "0.15.1"}

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "0.9.0"

[dev-dependencies]
panic-halt = "0.2.0"

